--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
      </head>
         
     <body>
-    <img src="614724.jpg" width="300" height="300"/>
+    <img src="614724.jpg" width="300" height="300">
           <h1> Mulugeta Assefa </h1>
         <ul>
             <li>W1D1- this homepage </li>
