--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
            <li> W1D3- Recipe</li>
            <li>W1D4- Movie Review </li>
            <li> W1D5- MP3 Library</li>
-           <li> W1D6- MOvie Review PHP</li>
+           <li> W1D6- Movie Review PHP</li>
         </ul>
                <a href="https://validator.w3.org/check/referer">
  <img src="https://manalabs.org/img/w3c-html.png" alt="validate">
